--- a/translations/en.json
+++ b/translations/en.json
@@ -1,10 +1,10 @@
 {
-  "title": "Systemair SAVE Connect 2",
+  "title": "Systemair SAVE Connect 2 Integration",
   "config": {
     "step": {
       "user": {
         "title": "Connect to Systemair",
-        "description": "Enter the base URL of your Systemair SAVE Connect 2 device.",
+        "description": "Enter the IP address or hostname of your Systemair SAVE Connect 2 device.",
         "data": {
           "base_url": "Base URL (e.g., http://192.168.0.60)"
         }
